# python-standard

./: git-commit-msg  pyproject.toml  readme.md
